@@ -1,3 +1,8 @@
+2000-10-08  Chris Rankin  <rankinc@zipworld.com.au>
+
+	* libs/XResource.c
+	Fix build problem - XrmCombineDatabase returns void.
+
 2000-10-08  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* libs/XResource.c (DoMergeString):
